add handler and lighttpd configuration

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
-# handlers file for gentoo-buildserver
+
+- name: Start and enable lighttpd service
+  service:
+    name: lighttpd
+    state: restarted
+    enabled: yes
